# cxx-cmake-vcpkg-template

./: .ignore  CMakeLists.txt  CMakePresets.json  README  main.cpp  vcpkg.json
src/: fibo.cpp  main.cpp
